--- a/src/app/components/record-list.component.html
+++ b/src/app/components/record-list.component.html
@@ -6,7 +6,7 @@
       <div class="panel-heading">List of records in database</div>
       <table class="table table-striped table-bordered">
         <thead>
-          <tr><th>Catalog Number:</th><th>Artist:</th><th>Title:</th><th></th></tr>
+          <tr><th>Catalog Number:</th><th (click)="sortByArtist()">Artist:</th><th>Title:</th><th></th></tr>
         </thead>
         <tbody>
           <tr *ngFor="let record of records">
