Added genre to records, genres are documents in mongodb.

--- a/src/app/components/record.component.html
+++ b/src/app/components/record.component.html
@@ -7,6 +7,7 @@
       <li class="list-group-item">Artist: {{record.artist}}</li>
       <li class="list-group-item">Release year: {{record.year}}</li>
       <li class="list-group-item">Label: {{record.label}}</li>
+      <li class="list-group-item">Genre: {{record.genre}}</li>
     </ul>
     <div class="panel-body">
       <button class="btn btn-primary" (click)="goBack()">Back</button>
