--- a/src/app/components/add-record.component.html
+++ b/src/app/components/add-record.component.html
@@ -54,6 +54,18 @@
           </div>
         </div>
         <div class="form-group">
+          <label for="inputGenre" class="col-sm-2 control-label">Genre:</label>
+          <div class="col-sm-10">
+            <select name="inputGenre" class="form-control" required [(ngModel)]="record.genre" #inputGenre="ngModel">
+              <option *ngFor="let genre of genres" [value]="genre.genre">{{genre.genre}}</option>
+            </select>
+            <div [hidden]="inputGenre.valid"
+                 class="alert alert-danger"><span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+              Genre is required
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
             <button type="submit" class="btn btn-primary" [disabled]="!recordForm.form.valid">Add</button>
           </div>
