--- a/src/app/components/edit-record.component.html
+++ b/src/app/components/edit-record.component.html
@@ -34,6 +34,14 @@
           </div>
         </div>
         <div class="form-group">
+          <label for="genre" class="col-sm-2 control-label">Genre:</label>
+          <div class="col-sm-10">
+            <select class="form-control" required name="genre" [(ngModel)]="record.genre" id="genre">
+              <option *ngFor="let genre of genres" [value]="genre.genre">{{genre.genre}}</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
             <button type="submit" class="btn btn-primary" [disabled]="!recordForm.form.valid">Update</button>
             <!--<button class="btn btn-primary" (click)="goBack()">Back</button>-->
