--- a/src/app/components/record.component.html
+++ b/src/app/components/record.component.html
@@ -2,7 +2,7 @@
   <div class="panel panel-primary">
     <div class="panel-heading">Record details</div>
     <ul class="list-group">
-      <li class="list-group-item">Catalog number: {{record.id}}</li>
+      <li class="list-group-item">Catalog number: {{record.catnum}}</li>
       <li class="list-group-item">Title: {{record.title}}</li>
       <li class="list-group-item">Artist: {{record.artist}}</li>
       <li class="list-group-item">Release year: {{record.year}}</li>
